# badc

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  b3d.c  build.rs  c99-gaps.md  call-abi-invariants.md  hello  hello.c  quicksort  quicksort-elf-x64  run_demos.sh  std-conformance.md
.github/workflows/: asm-fuzz.yml  ci.yml  release.yml
demos/: README.md  _tu_build.py  coro_pool.c  hello_server  hello_server.c  maze.c  sqlite3_main.c  threads.c
demos/bearssl/: README.md  setup.py  smoke.py  smoke_main.c
demos/bzip2/: README.md  setup.py  smoke.py  smoke_main.c
demos/chibicc/: README.md  self_host.py  setup.py  smoke.py
demos/coroutines/: setup.py  smoke.py
demos/curl/: README.md  _mingw.h  curl_client.c  curl_config.h  curl_syslink.h  setup.py  smoke.py
demos/edk2/: AutoGenGlue.c  MiniAutoGen.h  MyApp.c  MyAppArm.c  README.md  badc-efi-cc  badc-efi-cc-aarch64  badc_cc.py  badc_efi_compat.h  badc_toolchain.py  build_badc_selfhost.py  build_ovmf.py  qemu_efi.py  setup.py  smoke.py  va_arg_walk.c
demos/efi_hello/: efi_hello.c
demos/gui_hello/: README.md  hello_macos.c  hello_win32.c  hello_x11.c  smoke.py
demos/include/: README.md  TargetConditionals.h  cbor.h  dbt.h  direct.h  libfdt.h  minwinbase.h  minwindef.h  processthreadsapi.h  rgfw_macos_link.h  rgfw_win32_link.h  sdkddkver.h  windowsx.h  winuser.h  xinput.h  zlib.h
demos/include/CoreAudio/: AudioHardware.h
demos/include/CoreVideo/: CVDisplayLink.h
demos/include/GL/: gl.h  glx.h
demos/include/Hypervisor/: Hypervisor.h
demos/include/IOKit/: IOKitLib.h
demos/include/OpenGL/: gl.h
demos/include/X11/: XKBlib.h  Xatom.h  Xlib.h  keysymdef.h
demos/include/linux/: input-event-codes.h  (+1 more)
demos/kernel/: README.md  kernel.c  preempt.c  smoke.py
demos/kissfft/: README.md  setup.py  smoke.py  smoke_main.c
demos/libdill/: setup.py  smoke.py  x86intrin.h
demos/libmill/: setup.py  smoke.py
demos/linux/: .gitignore  README.md  ccshim.py  probecfg.py  setup.py  sweep.py
demos/lua/: README.md  setup.py  smoke.py
demos/miniz/: README.md  setup.py  smoke.py  smoke_main.c
demos/monocypher/: README.md  setup.py  smoke.py  smoke_main.c
demos/nasm/: README.md  hexdump.c  hexdump.py  nasmw.c  selfhost.py  setup.py  smoke.py
demos/nt_hello/: nt_hello.c
demos/nt_loader/: nt_loader.c  smoke.py
demos/python/: README.md  asm_trampoline.c  bench.py  build.py  compare_compilers.py  gen_manifest.py  setup.py  smoke.py  win_build.py  win_entry.c  win_excluded_stubs.c
demos/qemu/: README.md  setup.py  smoke.py
demos/quickjs/: README.md  repl_stub.c  setup.py  smoke.py
demos/raylib/: README.md  loderunner.c  loderunner.h  loderunner_logic.c  oracle_diff.c  setup.py  smoke.py  test_loderunner.c
demos/scc/: setup.py  smoke.py
demos/sqlite3/: README.md  diag.c  hello.c  probe_imports.c  setup.py  setup.sh  shell_startup_probe.c  smoke.py  smoke.sh
demos/stb/: alarm_ogg.h  setup.py  smoke.py  smoke_main.c
demos/tcl/: README.md  setup.py  smoke.py
demos/tinycc/: README.md  self_host.py  setup.py  smoke.py
demos/tweetnacl/: README.md  setup.py  smoke.py  smoke_main.c
demos/wdm_driver/: wdm_driver.c
demos/yasm/: README.md  setup.py  smoke.py
examples/: bench.rs  dump_ents.rs  dump_vars.rs
fixtures/c/: adjacent_strings.c  argv_first_char.c  array_initializers.c  arrays_basic.c  atoi_negative.c  binary_search_tree.c  bitfields.c  break_continue.c  bst_free.c  c4.c  c5_vprintf.c  c99_arith_common_width.c  c99_qualifiers.c  cast_to_struct_pointer.c  code_as_data.c  deferred_atoi_negative_pe_arm64.c  deferred_c99_arith_common_width.c  deferred_fn_ptr_struct_return.c  deferred_libc_data_globals_windows.c  deferred_long_width.c  deferred_mixed_signed_unsigned.c  deferred_optimizer_aggregates.c  deferred_struct_fp_call.c  deferred_tls_with_static_locals.c  deferred_unsigned_arith_high_half.c  deferred_unsigned_div_mod.c  dlopen_atoi.c  dlopen_strlen.c  do_while.c  double_free.c  double_pointers.c  enum_tag_types.c  file_io.c  float_arithmetic.c  float_pointer_basics.c  fn_ptr_struct_return.c  forge_code_pointer.c  function_pointer_typedefs.c  function_pointers.c  getenv_value.c  (+66 more)
headers/: badc-linux-aarch64.h  badc-linux-x64.h  badc-macos-aarch64.h  badc-windows-arm64.h  badc-windows-x64.h
headers/include/: TargetConditionals.h  _builtins.h  alloca.h  assert.h  bcrypt.h  c5io.h  conio.h  copyfile.h  crt_externs.h  ctype.h  dirent.h  dlfcn.h  endian.h  errno.h  execinfo.h  fcntl.h  fenv.h  float.h  fts.h  ftw.h  getopt.h  glob.h  grp.h  hvsocket.h  intrin.h  inttypes.h  io.h  iphlpapi.h  langinfo.h  libgen.h  limits.h  link.h  lmcons.h  locale.h  malloc.h  math.h  memory.h  mstcpip.h  msvc_compat.h  mswsock.h  (+40 more)
lib/: runtime.c  runtime_libc_exit.c
libc/include/: AvailabilityMacros.h  _builtins.h  aclapi.h  conio.h  cpuid.h  crtdbg.h  ctype.h  direct.h  elf.h  err.h  errno.h  execinfo.h  fcntl.h  float.h  ftw.h  glob.h  grp.h  langinfo.h  libintl.h  limits.h  locale.h  malloc.h  math.h  netdb.h  pathcch.h  poll.h  pthread.h  rpc.h  sched.h  sdkddkver.h  signal.h  stdalign.h  stdarg.h  stdatomic.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  sysexits.h  (+11 more)
libc/lib/: compiler_rt.c  runtime.c
scripts/: amalgamate.py  apt_resilient_install.sh  install_hooks.py  snapshots.py  validate_local_boxes.py
scripts/git-hooks/: install.sh  post-commit  pre-push
scripts/vendor_deps/: README.md  _fetch.py  build_bundle.py  build_qemu_bundle.py
src/: lib.rs  main.rs
src/c4/: codegen.rs  compiler.rs  error.rs  headers.rs  host.rs  lexer.rs  mod.rs  op.rs  optimize.rs  parser.rs  preprocessor.rs  program.rs  symbol.rs  tests.rs  token.rs  vm.rs
src/c5/: ast.rs  compiler.rs  error.rs  headers.rs  ir.rs  lexer.rs  mod.rs  op.rs  optimize.rs  preprocessor.rs  program.rs  runtime.rs  symbol.rs  token.rs
tests/: cli_fixture_smoke.rs  cli_linker_smoke.rs
tests/perf/: build_tcc.sh  compress.c  crypto.c  fib.c  qsort.c  quickjs_bench.c  run.py  sieve.c  sqlite.c  sqlite_bench.c  stb.c
tools/: core-walker.py  gen_isa.py  gen_isa_a64.py
tools/diff_vorbis/: diff_run.sh  instrument.py
(+4099 files in other folders)
