[package]
name = "badc"
version = "0.0.6"
edition = "2024"
license = "MIT"

[lib]
name = "badc"
path = "src/lib.rs"

[[bin]]
name = "badc"
path = "src/main.rs"

[features]
default = ["std"]
# Enables the StdHost adapter (file IO, env vars, real stdin/stdout) and
# the std::error::Error impl on C5Error (the c5-dialect error type).
# Without it, the library builds under no_std + alloc and callers must
# supply their own Host impl.
std = []

[dependencies]
# `hashbrown` is the no_std-friendly hash table the preprocessor uses
# for the macro tables. We keep it on `default-features = false` so
# it doesn't drag in `ahash`'s rng init or the `serde` feature -- we
# just want the map. The default `foldhash` hasher is fine for our
# purely internal keys (macro names) and avoids the small extra cost
# of the `aHashMap` initialisation.
hashbrown = { version = "0.17", default-features = false, features = ["default-hasher"] }
