[package]
name = "badc"
version = "0.0.8"
edition = "2024"
license = "MIT"

[lib]
name = "badc"
path = "src/lib.rs"

[[bin]]
name = "badc"
path = "src/main.rs"
required-features = ["std", "linker"]

[features]
default = ["std", "linker"]
# Enables the StdHost adapter (file IO, env vars, real stdin/stdout) and
# the std::error::Error impl on C5Error (the c5-dialect error type).
# Without it, the library builds under no_std + alloc and callers must
# supply their own Host impl.
std = []
# Enables the cross-translation-unit linker: writing and reading c5
# bytecode object files (ELF wrapper, `.o`) and ar(5) archives
# (`.a`), plus the `link_units` driver that merges objects into a
# single Program ready for the existing native code emitters. Adds
# storage-class linkage tracking (external vs internal) and the
# corresponding undefined-symbol relocation machinery. Required by
# the `badc` binary (`-c`, `.o` / `.a` inputs, `-L`, `-l`).
# Library callers that don't need multi-TU artifacts can opt out
# with `default-features = false, features = ["std"]` to keep the
# library footprint slim.
linker = []
# Exposes the register-allocator pressure knobs (per-bank GPR / FP
# count caps) to the test harness and the `badc` CLI (`--max-gpr=N`,
# `--max-fpr=N`, and the `BADC_MAX_GPR` / `BADC_MAX_FPR` environment
# variables). Used to force spilling at arbitrary pressure for
# codegen validation. Off by default: a production build ignores the
# caps entirely and the allocator always sees the full register file.
# Pulls in `std` for the env-var knobs and the thread-local override.
codegen_test = ["std"]

[dependencies]
# `hashbrown` is the no_std-friendly hash table the preprocessor uses
# for the macro tables. We keep it on `default-features = false` so
# it doesn't drag in `ahash`'s rng init or the `serde` feature -- we
# just want the map. The default `foldhash` hasher is fine for our
# purely internal keys (macro names) and avoids the small extra cost
# of the `aHashMap` initialisation.
hashbrown = { version = "0.17", default-features = false, features = ["default-hasher"] }
# `rustc-hash` ships the `FxHash` hasher rustc itself uses for its
# internal id-keyed maps. We use it through `hashbrown::HashMap` (so
# the `no_std + alloc` build path is unchanged) on the codegen hot
# paths whose keys are small integers (bytecode PCs, function ids)
# and whose iteration order is never relied on. Default-features off
# matches the rest of the dep set.
rustc-hash = { version = "2", default-features = false }
# `libm` supplies the software `fma` / `fmaf` the SSA VM uses to
# evaluate `Inst::Fma` with a single rounding, matching the native
# fused multiply-add instruction on every target. `f64::mul_add` would
# round identically but is `std`-only; routing through `libm` keeps the
# `--no-default-features` (no_std) build working unchanged.
libm = { version = "0.2", default-features = false }

[lints.rust]
# Promote the default-warn unused lints to deny so dead state can't
# accumulate across refactors. CI already runs `-D warnings`, but
# pinning the floor in Cargo.toml means a local `cargo build`
# matches CI behaviour without RUSTFLAGS plumbing.
unused_variables = "deny"
unused_assignments = "deny"
unused_imports = "deny"
unused_must_use = "deny"
unused_mut = "deny"
dead_code = "deny"
