[package]
name = "badc"
version = "0.1.2"
edition = "2024"
license = "MIT"
description = "A quick, slim cross-platform C compiler (also a compiler-as-library) (C99, C11, and more) with a JIT and native ELF / PE / Mach-O backends."
repository = "https://github.com/kromych/badc"
readme = "README.md"
keywords = ["c", "compiler", "c11", "jit", "cross-compiler"]
categories = ["compilers", "development-tools"]
# The bundled C headers and runtime are `include_str!`'d into the
# library at build time, so they must ship in the published package.
include = [
    "src/**/*.rs",
    "lib/**",
    "headers/**",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[lib]
name = "badc"
path = "src/lib.rs"

[[bin]]
name = "badc"
path = "src/main.rs"
required-features = ["std", "full"]

# The CLI integration tests drive the `badc` binary (`CARGO_BIN_EXE_badc`)
# and the native object / link APIs, so they only build under `full`.
# Declaring it here keeps `cargo build/clippy --all-targets` under the
# default (host-JIT) features from compiling them, the same way the bin
# is skipped.
[[test]]
name = "cli_linker_smoke"
path = "tests/cli_linker_smoke.rs"
required-features = ["full"]

[[test]]
name = "cli_fixture_smoke"
path = "tests/cli_fixture_smoke.rs"
required-features = ["full"]

[features]
# The default library is the host-arch JIT only (lexer / parser /
# preprocessor / codegen passes / `jit_run`). On-disk native output
# (`native-emit`) and the cross-TU linker it pulls in (`full`) are
# opt-in. The `badc` binary declares them in `required-features`, and
# the repo's build / test / CI invocations pass `--features full`.
default = ["std"]
# Enables the StdHost adapter (file IO, env vars, real stdin/stdout) and
# the std::error::Error impl on C5Error (the c5-dialect error type).
# Without it, the library builds under no_std + alloc and callers must
# supply their own Host impl.
std = []
# Enables on-disk native output: the per-format container writers
# (ELF / PE / Mach-O) and `emit_native*`, which turn a lowered program
# into an executable / object image. Without it the library keeps the
# in-memory JIT (`jit_run`) and the codegen passes but cannot write a
# native binary. Requires `std`.
native-emit = ["std"]
# The full standalone-compiler feature set the `badc` binary needs.
# Pulls in `native-emit` and adds the cross-translation-unit linker:
# writing and reading c5 bytecode object files (ELF wrapper, `.o`) and
# ar(5) archives (`.a`), plus the `link_units` driver that merges
# objects into a single Program ready for the native code emitters.
# Adds storage-class linkage tracking (external vs internal) and the
# corresponding undefined-symbol relocation machinery. Required by the
# `badc` binary (`-c`, `.o` / `.a` inputs, `-L`, `-l`). Library callers
# that want only the host JIT can opt out with `default-features =
# false, features = ["std"]`.
full = ["native-emit"]
# Exposes the register-allocator pressure knobs (per-bank GPR / FP
# count caps) to the test harness and the `badc` CLI (`--max-gpr=N`,
# `--max-fpr=N`, and the `BADC_MAX_GPR` / `BADC_MAX_FPR` environment
# variables). Used to force spilling at arbitrary pressure for
# codegen validation. Off by default: a production build ignores the
# caps entirely and the allocator always sees the full register file.
# Pulls in `std` for the env-var knobs and the thread-local override.
codegen_test = ["std"]

[dependencies]
# `hashbrown` is the no_std-friendly hash table the preprocessor uses
# for the macro tables. We keep it on `default-features = false` so
# it doesn't drag in `ahash`'s rng init or the `serde` feature -- we
# just want the map. The default `foldhash` hasher is fine for our
# purely internal keys (macro names) and avoids the small extra cost
# of the `aHashMap` initialisation.
hashbrown = { version = "0.17", default-features = false, features = ["default-hasher"] }
# `rustc-hash` ships the `FxHash` hasher rustc itself uses for its
# internal id-keyed maps. We use it through `hashbrown::HashMap` (so
# the `no_std + alloc` build path is unchanged) on the codegen hot
# paths whose keys are small integers (bytecode PCs, function ids)
# and whose iteration order is never relied on. Default-features off
# matches the rest of the dep set.
rustc-hash = { version = "2", default-features = false }
# `libm` supplies the software `fma` / `fmaf` the SSA VM uses to
# evaluate `Inst::Fma` with a single rounding, matching the native
# fused multiply-add instruction on every target. `f64::mul_add` would
# round identically but is `std`-only; routing through `libm` keeps the
# `--no-default-features` (no_std) build working unchanged.
libm = { version = "0.2", default-features = false }

[lints.rust]
# Keep the unused lints at their default `warn` level in the shipped
# manifest. CI and the pre-push hook run `-D warnings` (RUSTFLAGS +
# clippy), so dead state is still rejected before merge; baking `deny`
# into the published crate would instead turn any of these into a hard
# error under a different rustc version when built as the root crate
# (`cargo install badc`), where Cargo's registry-dependency lint cap
# does not apply. rustc lint coverage is not stable across versions, so
# the floor stays at `warn` for end users.
unused_variables = "warn"
unused_assignments = "warn"
unused_imports = "warn"
unused_must_use = "warn"
unused_mut = "warn"
dead_code = "warn"
